[package]
name = "clg"
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"
description = "A logger specifically designed for wasm32-unknown-unknown."
readme = "docs/Readme.md"
repository = "https://github.com/2moe/clg"
authors = ["Moe <m@tmoe.me>"]
categories = ["wasm"]
# exclude = ["tmp", "tmp.*", "Cargo.lock"]

[features]
default = [
    #
    "logger",
]
logger = ["dep:owo-colors", "dep:log", "dep:time", "dep:wasm-bindgen"]

[dependencies]
# js-sys = "0.3.69"
log = { version = "0.4", features = ["std"], optional = true }
owo-colors = { version = "4.2", optional = true }
time = { version = "0.3", optional = true, default-features = false, features = [
    "local-offset",
    "wasm-bindgen",
] }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", default-features = false, features = ["console"] }

[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-unknown-unknown"]
rustdoc-args = ["--cfg", "__unstable_doc"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(__unstable_doc)'] }

[dev-dependencies.testutils]
path = "../../../data/git/sa/testutils/"
version = "0.0.5"
